Fix migracion q2form

--- a/consentimientos-service/pom.xml
+++ b/consentimientos-service/pom.xml
@@ -108,6 +108,11 @@
 <artifactId>hapi-fhir-client</artifactId>
 <version>${hapifhir.version}</version>
 </dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.15.0</version> 
+</dependency>
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-configuration-processor</artifactId>
