--- a/consentimientos-service/src/main/resources/application.properties
+++ b/consentimientos-service/src/main/resources/application.properties
@@ -59,3 +59,7 @@ spring.jta.narayana.transaction-manager-id=1
 
 #banner
 spring.banner.location=classpath:banner.txt
+
+#fhir
+fhir.server.base=http://hapi.fhir.org/baseR5/
+
