Añadiendo urls de prueba

--- a/human-tasks-service/pom.xml
+++ b/human-tasks-service/pom.xml
@@ -120,7 +120,7 @@
   	</dependency>
   	<dependency>
   		<groupId>us.dit</groupId>
-  		<artifactId>consentimientos-model</artifactId>
+  		<artifactId>human-tasks-model</artifactId>
   		<version>1.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
