--- a/human-tasks-service/src/main/resources/application.properties
+++ b/human-tasks-service/src/main/resources/application.properties
@@ -22,8 +22,8 @@ kieserver.location=http://localhost:8090/rest/server
 #propiedades del sistema para la configuracion del servidor
 #utilizar el prefijo system.properties y a continuacion nombre de la propiedad y valor
 system.properties.org.kie.server.bypass.auth.user=true
-system.properties.org.kie.server.pwd=consentimientos
-system.properties.org.kie.server.user=consentimientos
+system.properties.org.kie.server.pwd=admin
+system.properties.org.kie.server.user=admin
 
 #kie server capabilities
 kieserver.drools.enabled=true
@@ -45,7 +45,7 @@ jbpm.executor.enabled=false
 #data source configuration
 spring.datasource.username=jbpm
 spring.datasource.password=jbpm.2.DDBB*
-spring.datasource.url=jdbc:postgresql://localhost:5432/consentimientos
+spring.datasource.url=jdbc:postgresql://localhost:5432/ht
 spring.datasource.driver-class-name=org.postgresql.xa.PGXADataSource
 
 #hibernate configuration
