Organizando recursos para test

--- a/human-tasks-service/src/main/resources/application.properties
+++ b/human-tasks-service/src/main/resources/application.properties
@@ -63,3 +63,11 @@ spring.banner.location=classpath:banner.txt
 #fhir
 fhir.server.base=http://hapi.fhir.org/baseR5/
 
+#variables para los tests
+test.taskid=765064
+test.containerid=human-tasks-management-kjar-1.0.0-SNAPSHOT
+#nombre del proceso que contiene una tarea asignada al role wbadmin
+test.roleprocess=HumanTasksManagement.TareaARol
+#nombre del proceso que asigna una tarea al usuario que lo inicia
+test.userprocess=human-tasks-management.TareaAUsuario
+
