Organizando recursos para test

--- a/human-tasks-service/src/main/resources/application.properties
+++ b/human-tasks-service/src/main/resources/application.properties
@@ -64,7 +64,10 @@ spring.banner.location=classpath:banner.txt
 fhir.server.base=http://hapi.fhir.org/baseR5/
 
 #variables para los tests
+
+#identificador de la tarea fhir pasada como entrada a las tareas humanas de test
 test.taskid=765064
+#nombre del contenedor desplegado en el servidor kie embebido
 test.containerid=human-tasks-management-kjar-1.0.0-SNAPSHOT
 #nombre del proceso que contiene una tarea asignada al role wbadmin
 test.roleprocess=HumanTasksManagement.TareaARol
